# WebSecurity-Academy-with-Rust

./: README.md
API testing/: Cargo.toml
API testing/Exploiting a mass assignment vulnerability/: Cargo.toml  README.md
API testing/Exploiting an API endpoint using documentation/: Cargo.toml  README.md
API testing/Exploiting server-side parameter pollution in a REST URL/: Cargo.toml  README.md
API testing/Exploiting server-side parameter pollution in a query string/: Cargo.toml
API testing/Finding and exploiting an unused API endpoint/: Cargo.toml  README.md
Access control vulnerabilities/: Cargo.toml
Access control vulnerabilities/Insecure direct object references/: Cargo.toml  README.md
Access control vulnerabilities/Method-based access control can be circumvented/: Cargo.toml  README.md
Access control vulnerabilities/Multi-step process with no access control on one step/: Cargo.toml  README.md
Access control vulnerabilities/Referer-based access control/: README.md
Access control vulnerabilities/URL-based access control can be circumvented/: README.md
Access control vulnerabilities/Unprotected admin functionality/: README.md
Access control vulnerabilities/Unprotected admin functionality with unpredictable URL/: Cargo.toml  README.md
Access control vulnerabilities/User ID controlled by request parameter/: Cargo.toml  README.md
Access control vulnerabilities/User ID controlled by request parameter with data leakage in redirect/: Cargo.toml  README.md
Access control vulnerabilities/User ID controlled by request parameter with password disclosure/: Cargo.toml  README.md
Access control vulnerabilities/User ID controlled by request parameter, with unpredictable user IDs/: Cargo.toml  README.md
Access control vulnerabilities/User role can be modified in user profile/: Cargo.toml  README.md
Access control vulnerabilities/User role controlled by request parameter/: Cargo.toml  README.md
Access control vulnerabilities/insecure_direct_object_references/: Cargo.toml  README.md
Access control vulnerabilities/method_based_access_control_can_be_circumvented/: Cargo.toml
Access control vulnerabilities/referer_based_access_control/: Cargo.toml  README.md
Access control vulnerabilities/unprotected_admin_functionality/: Cargo.toml  README.md
Access control vulnerabilities/unprotected_admin_functionality_with_unpredictable_url/: Cargo.toml  README.md
Access control vulnerabilities/url_based_access_control_can_be_circumvented/: Cargo.toml
Access control vulnerabilities/user_id_controlled_by_request_parameter/: Cargo.toml
Access control vulnerabilities/user_id_controlled_by_request_parameter_with_password_disclosure/: README.md
Access control vulnerabilities/user_role_can_be_modified_in_user_profile/: Cargo.toml
Access control vulnerabilities/user_role_controlled_by_request_parameter/: Cargo.toml
Authentication/: Cargo.toml  passwords.txt
Authentication/2FA broken logic/: README.md
Authentication/2FA bypass using a brute-force attack/: README.md
Authentication/2FA simple bypass/: Cargo.toml  README.md
Authentication/2fa_broken_logic/: README.md
Authentication/2fa_bypass_using_a_brute_force_attack/: README.md
Authentication/2fa_simple_bypass/: README.md
Authentication/Broken brute-force protection, IP block/: Cargo.toml  README.md
Authentication/Broken brute-force protection, multiple credentials per request/: Cargo.toml  README.md
Authentication/Brute-forcing a stay-logged-in cookie/: README.md
Authentication/Multi-threaded/: README.md
Authentication/Offline password cracking/: Cargo.toml  README.md
Authentication/Password brute-force via password change/: README.md
Authentication/Password reset broken logic/: Cargo.toml  README.md
Authentication/Password reset poisoning via middleware/: Cargo.toml  README.md
Authentication/Single-threaded/: README.md
Authentication/Username enumeration via account lock/: README.md
Authentication/Username enumeration via different responses/: README.md
Authentication/Username enumeration via response timing/: README.md
Authentication/Username enumeration via subtly different responses/: README.md
Authentication/offline_password_cracking/: Cargo.toml
Authentication/password_reset_broken_logic/: Cargo.toml  README.md
Authentication/username_enumeration_via_different_responses_multithread/: README.md
Authentication/username_enumeration_via_subtly_different_responses/: README.md
Business logic vulnerabilities/: Cargo.toml
Business logic vulnerabilities/Authentication bypass via encryption oracle/: Cargo.toml  README.md
Business logic vulnerabilities/Authentication bypass via flawed state machine/: Cargo.toml  README.md
Business logic vulnerabilities/Excessive trust in client-side controls/: Cargo.toml  README.md
Business logic vulnerabilities/Flawed enforcement of business rules/: Cargo.toml  README.md
Business logic vulnerabilities/High-level logic vulnerability/: Cargo.toml  README.md
Business logic vulnerabilities/Inconsistent handling of exceptional input/: Cargo.toml  README.md
Business logic vulnerabilities/Inconsistent security controls/: Cargo.toml  README.md
Business logic vulnerabilities/Infinite money logic flaw/: Cargo.toml  README.md
Business logic vulnerabilities/Insufficient workflow validation/: Cargo.toml  README.md
Business logic vulnerabilities/Weak isolation on dual-use endpoint/: Cargo.toml  README.md
Clickjacking/Clickjacking with form input data prefilled from a URL parameter/: Cargo.toml  README.md
Cross-site request forgery (CSRF)/: Cargo.toml
Cross-site scripting (XSS)/: Cargo.toml
Cross-site scripting (XSS)/Reflected DOM XSS/: Cargo.toml
File upload vulnerabilities/: Cargo.toml
NoSQL injection/: Cargo.toml  README.md
OS command injection/: Cargo.toml
Path traversal/: Cargo.toml
SQL injection/: Cargo.toml
Server-side request forgery (SSRF)/: Cargo.toml
Server-side template injection (SSTI)/: Cargo.toml
Web cache poisoning/: Cargo.toml  README.md
XML external entity (XXE) injection/: Cargo.toml
(+595 files in other folders)
