[workspace]
members = [
    'Exploiting an API endpoint using documentation',
    'Finding and exploiting an unused API endpoint',
    'Exploiting a mass assignment vulnerability',
    'Exploiting server-side parameter pollution in a query string',
    'Exploiting server-side parameter pollution in a REST URL'
]
