[workspace]
members = [
    'Excessive trust in client-side controls',
    'Flawed enforcement of business rules',
    'High-level logic vulnerability',
    'Inconsistent security controls',
    'Inconsistent handling of exceptional input',
    'Weak isolation on dual-use endpoint',
    'Insufficient workflow validation'
]
