[workspace]
members = [
    'Reflected XSS into HTML context with nothing encoded',
    'Stored XSS into HTML context with nothing encoded',
    'DOM XSS in document.write sink using source location.search',
    'DOM XSS in innerHTML sink using source location.search',
    'DOM XSS in jQuery anchor href attribute sink using location.search source',
    'DOM XSS in jQuery selector sink using a hashchange event',
    'Reflected XSS into attribute with angle brackets HTML-encoded',
    'Stored XSS into anchor href attribute with double quotes HTML-encoded',
    'Reflected XSS into a JavaScript string with angle brackets HTML encoded',
    'DOM XSS in document.write sink using source location.search inside a select element',
    'DOM XSS in AngularJS expression with angle brackets and double quotes HTML-encoded',
    'Reflected DOM XSS',
    'Stored DOM XSS',
    'Reflected XSS into HTML context with most tags and attributes blocked',
    'Reflected XSS into HTML context with all tags blocked except custom ones',
    'Reflected XSS with some SVG markup allowed',
    'Reflected XSS in canonical link tag',
    'Reflected XSS into a JavaScript string with single quote and backslash escaped',
    'Reflected XSS into a JavaScript string with angle brackets and double quotes HTML-encoded and single quotes escaped',
    'Stored XSS into onclick event with angle brackets and double quotes HTML-encoded and single quotes and backslash escaped',
    'Reflected XSS into a template literal with angle brackets, single, double quotes, backslash and backticks Unicode-escaped',
    'Exploiting cross-site scripting to steal cookies',
    'Exploiting cross-site scripting to capture passwords'
]
