[workspace]
members = [
    'Remote code execution via polyglot web shell upload',
    'Remote code execution via web shell upload',
    'Web shell upload via Content-Type restriction bypass',
    'Web shell upload via extension blacklist bypass',
    'Web shell upload via obfuscated file extension',
    'Web shell upload via path traversal',
    'Web shell upload via race condition',
]
