[workspace]
members = [
    'File path traversal, simple case',
    'File path traversal, traversal sequences blocked with absolute path bypass',
    'File path traversal, traversal sequences stripped non-recursively',
    'File path traversal, traversal sequences stripped with superfluous URL-decode',
    'File path traversal, validation of file extension with null byte bypass',
    'File path traversal, validation of start of path',
]
