[workspace]
members = [
    'Blind SQL injection with conditional errors/single-threaded',
    'Blind SQL injection with conditional errors/multi-threaded',
    'Blind SQL injection with conditional responses/single-threaded',
    'Blind SQL injection with conditional responses/multi-threaded',
    'Blind SQL injection with out-of-band data exfiltration',
    'Blind SQL injection with out-of-band interaction',
    'Blind SQL injection with time delays',
    'Blind SQL injection with time delays and information retrieval/single-threaded',
    'Blind SQL injection with time delays and information retrieval/multi-threaded',
    'SQL injection attack, listing the database contents on non-Oracle databases',
    'SQL injection attack, listing the database contents on Oracle',
    'SQL injection attack, querying the database type and version on MySQL and Microsoft',
    'SQL injection attack, querying the database type and version on Oracle',
    'SQL injection UNION attack, determining the number of columns returned by the query',
    'SQL injection UNION attack, finding a column containing text',
    'SQL injection UNION attack, retrieving data from other tables',
    'SQL injection UNION attack, retrieving multiple values in a single column',
    'SQL injection vulnerability allowing login bypass',
    'SQL injection vulnerability in WHERE clause allowing retrieval of hidden data',
    'SQL injection with filter bypass via XML encoding',
    'Visible error-based SQL injection',
]
