[workspace]
members = [
    'Web cache poisoning with an unkeyed header',
    'Web cache poisoning with an unkeyed cookie',
    'Web cache poisoning with multiple headers',
    'Targeted web cache poisoning using an unknown header',
    'Web cache poisoning via an unkeyed query string',
    'Web cache poisoning via an unkeyed query parameter',
    'Parameter cloaking',
    'Web cache poisoning via a fat GET request'
]
