[package]
name = " unprotected_admin_functionality_with_unpredictable_url"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.6.0"
reqwest = { version = "0.11.20", features = ["blocking"] }
select = "0.6.0"
text-colorizer = "1.0.0"
lazy_static = "1.4.0"
