[package]
name = " user_role_can_be_modified_in_user_profile"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.6.0"
reqwest = { version = "0.11.20", features = ["blocking"] }
select = "0.6.0"
text-colorizer = "1.0.0"
