[package]
name = "samesite_lax_bypass_via_cookie_refresh"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
reqwest = { version = "0.11.20", features = ["blocking"] }
text-colorizer = "1.0.0"
regex = "1.10.0"
