[package]
name = "reflected_xss_into_a_javascript_string_with_angle_brackets_and_double_quotes_html_encoded_and_single_quotes_escaped"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
reqwest = { version = "0.11.20", features = ["blocking"] }
text-colorizer = "1.0.0"
