[package]
name = "reflected_xss_into_a_javascript_string_with_single_quote_and_backslash_escaped"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
reqwest = { version = "0.11.20", features = ["blocking"] }
text-colorizer = "1.0.0"
