[package]
name = "stored_xss_into_onclick_event_with_angle_brackets_and_double_quotes_html_encoded_and_single_quotes_and_backslash_escaped"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
reqwest = { version = "0.11.20", features = ["blocking"] }
text-colorizer = "1.0.0"
select = "0.6.0"
regex = "1.10.0"