[package]
name = "web_shell_upload_via_race_condition"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
regex = "1.10.0"
reqwest = { version = "0.11.20", features = ["blocking", "multipart"] }
select = "0.6.0"
text-colorizer = "1.0.0"
